Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7843

visible propertie doesn't effect with DropShadow effect.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.3
    • 4.6.1
    • Widgets: GraphicsView
    • None
    • qt-creator-win-opensource-1.3.80-qml-tp1.exe
    • c8fa23a5edd790d9eed0620068a29e03e4202cac

    Description

      If we clicked on rectangle then black box in corner appear and disappear, but if we uncomment DropShadow effect, clicked do nothing.

      import Qt 4.6
      Rectangle {
          width: 500
          height: 500
          Rectangle {
              id: rect
              width: 200; height: 300; border.width: 1
              anchors.centerIn: parent
              MouseRegion {
                  anchors.fill: parent
                  hoverEnabled: true
                  onClicked: {
                      test.visible = test.visible ? false : true;
                  }
              }
      //            effect: DropShadow {
      //                yOffset: 5
      //                xOffset: 5
      //                blurRadius: 16
      //            }
      
              Rectangle {
                  id: test
                  anchors.bottom: parent.bottom
                  anchors.right: parent.right
                  anchors.rightMargin: 2
                  anchors.bottomMargin: 2
      
                  width: 10
                  height: 10
                  visible: false
                  color: 'black'
              }
          }
      }
      
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            menard Alexis Menard (closed Nokia identity) (Inactive)
            sabrog Vladislav
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes