Invalidate the cache of QGraphicsEffect if a child becomes visible.

The effect might rely on a child to draw itself. So we need to redraw if
a child become visible or invisible.

Task-number:QTBUG-7843
Reviewed-by:janarve